# LMmarket

./: .gitignore  AGENTS.md  README.md  api.py  app.py  human_in_loop_ontology_edit.txt  item_feature_scores.csv  llm.py  loader.py  main.py  node_cnt_human_in_the_loop.json  node_cnt_human_in_the_loop_1_1.json  pipeline.py  plot.py  pyproject.toml  quicklook.py  requirements.txt  sample_user.json  simple_test.py  unitest.py  utils.py
data/: __init__.py  adapters.py  geo.py  hub.py  prepare_yelp.py  process_yelp.py  synthesize_requests.py  test_aspect.json  test_data.json  yelp.py
data_foundation/: __init__.py  benchmark_maker.py  extract_yelp.py  process_yelp.py
dataset/: _make_amazon.py  _make_amazon_beauty.py  build_benchmark.py  build_features.py  build_ontology.py  build_profiles.py  create_profiles.py  make.py  make_yelp.py  ontology.py  ontology_new.py  preload_features.json  prompts.py  static_theme.py  yelp.py
doc/: AGENTS.md  city_stat  dev_plan.md  distance.md  goal.md
foundation/: __init__.py  vectorize_yelp.py
helper/: continuity_check.py
networks/: aspect.py  aspect_handling.py  encoder.py  evaluator.py  faiss.py  helper.py  index.py  model.py  relevant_judge.py  segmenter.py  sentiment.py  slm.py  summarizer.py  symspell.py  tagger.py
output/: query_aspect_infos.json
past/: README.md  test_ontology.py
pilot/: count_per_user.py
playground/: embedding_symmetry.py  reproducibility.py
sample/: build_benchmark.py  tmp_collect_feature.py
scheme/: __init__.py  base.py  random.py
schemes/: base.py  bm25.py  embedding.py  random_.py
(+37 files in other folders)
