[project]
name = "lmmarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "datasets>=4.1.1",
    "einops>=0.8.1",
    "faiss-cpu>=1.12.0",
    "hf-transfer>=0.1.9",
    "numpy<2",
    "onnxruntime-gpu==1.22.0",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "spacy>=3.8.7",
    "symspellpy>=6.7.7",
    "tokenizers==0.20.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers==4.45.2",
    "wtpsplit",
]

[tool.uv.sources]
wtpsplit = { git = "https://github.com/segment-any-text/wtpsplit.git" }
